        - Add entries for web video and web audio files
        - Allow the chapter folder prefix to be localized
        - Hide chapter folders if the duration of the video is less than the chapter length
        - Don't hide engine names in the #--TRANSCODE--# folder if hide_enginenames is true

    Language updates:
        - Updated Dutch translation (thanks, leroy)

    Misc:
        - A lot of backports from UMS (thanks, all UMS developers!)
        - Fix duplicate entries in DVD/playlist/feed folders: GC566, GC636, GC1483
        - More accurate checks for reference frame counts to allow more videos to be remuxed rather than transcoded
        - Removed obsolete MPlayerAudio, MPlayerWebAudio and MPlayerWebVideoDump engines
        - Filename display formats can now be set at the profile level as well as per-renderer
        - More detailed logging to improve diagnostics and simplify issue reporting

1.82.0 - 2013-06-03

    Engines:
        - dcraw Thumbnailer:
            - Fix image transcoding
            - Add support for more extensions
        - FFmpeg:
            - Fix bug that disabled FFmpeg for compatible files
            - Fix audio channel selection (thanks, valib)
        - MEncoder Video:
            - Fixed bug that caused embedded subtitles to be displayed instead of external (thanks, SubJunk)
            - Fixed handling of per-renderer aspect-ratio settings (thanks, ExSport)
        - tsMuxeR:
            - Fixed 24-bit FLAC support with tsMuxeR (thanks, SubJunk)
            - Fix bug that disabled tsMuxeR for compatible files
        - VLC:
            - Fix looping playback
            - Add multi-threading support (GC1624: thanks, ccampora)
        - Misc:
            - New engine: VLCWebVideo ("vlcwebvideo")
            - Clean up engine names

    Renderers:
        - PS3: TV series with sound problems after "previously on" block should now play normally with the "Keep AC-3 track" option enabled (thanks, SubJunk)
