@@ -14,6 +14,7 @@ DLNAResource.1=No Encoding
 DLNAResource.2=No Enc.
 DLNAResource.3=Audio
 DLNAResource.4=Sub
+DLNAResource.5=protected
 DVDISOTitle.1=Title %d
 FFmpeg.0=Remux videos when possible instead of transcoding
 FFmpegDVRMSRemux.0=Alternative FFmpeg Path:
