@@ -1,4 +1,5 @@
 DLNAMediaDatabase.0=Pour un meilleur support de l'application,\nla biblioth\u00E8que m\u00E9dias doit \u00EAtre r\u00E9initialis\u00E9e.\nD\u00E9sol\u00E9 pour le d\u00E9rangement \!
+DLNAResource.5=prot\u00E9g\u00E9
 FFmpegDVRMSRemux.0=Chemin alternatif pour ffmpeg
 FFmpegDVRMSRemux.1=R\u00E9glages pour le remuxing DVR-MS
 FFmpegVideo.0=R\u00E9glages de l'encodage pour AviSynth/FFmpeg (Pr\u00E9f\u00E9rez AviSynth/MEncoder)
