@@ -42,6 +42,7 @@ Changelog:
 
     Language updates:
         - Updated Dutch translation (thanks, leroy)
+        - Updated French translation (thanks, gui17aume)
 
     Misc:
         - A lot of backports from UMS (thanks, all UMS developers!)
@@ -50,6 +51,7 @@ Changelog:
         - Removed obsolete MPlayerAudio, MPlayerWebAudio and MPlayerWebVideoDump engines
         - Filename display formats can now be set at the profile level as well as per-renderer
         - More detailed logging to improve diagnostics and simplify issue reporting
+        - Fix generation of music subfolders in iTunes Library (thanks, gui17aume)
 
 1.82.0 - 2013-06-03
 
